Fix text visibility issue

--- a/stroom-auth-ui/src/containers/users/userSelect/asyncUserSelect.css
+++ b/stroom-auth-ui/src/containers/users/userSelect/asyncUserSelect.css
@@ -2,6 +2,3 @@
   width: 300px;
 }
 
-.AsyncUserSelect input {
-  height: 0px;
-}
